--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
         <url>https://github.com/ActivatorGmbH/infinicast-sdk-java</url>
     </scm>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <properties>
         <!-- Maven plugins -->
         <version.gpg.plugin>1.5</version.gpg.plugin>
@@ -206,6 +213,7 @@
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
+                    <!--
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
@@ -217,6 +225,7 @@
                             <goals>deploy</goals>
                         </configuration>
                     </plugin>
+                    -->
                 </plugins>
             </build>
         </profile>
