--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.infinicast</groupId>
     <artifactId>infinicast-client</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Infinicast SDK Java</name>
@@ -65,11 +65,13 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.14</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.16.0</version>
         </dependency>
+        -->
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
