--- a/.github/workflows/maven-publish.yaml
+++ b/.github/workflows/maven-publish.yaml
@@ -8,29 +8,17 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'adopt'
-#        server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
-#        server-username: MAVEN_USERNAME
-#        server-password: MAVEN_PASSWORD
-
-    - name: Build with Maven
-      run: mvn -B package
-
-#    - name: Publish to Maven Central
-#      run: mvn deploy
-#      env:
-#        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-#        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-
-    - name: Sign and release Maven package
-      uses: samuelmeuli/action-maven-publish@v1
-      with:
-        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-        gpg_passphrase: ${{ secrets.GPG_PASSPHRASE }}
-        nexus_username: ${{ secrets.OSSRH_USERNAME }}
-        nexus_password: ${{ secrets.OSSRH_TOKEN }}
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+    - name: Publish package
+      run: mvn --batch-mode deploy
+      env:
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
