--- a/.github/workflows/maven-publish.yaml
+++ b/.github/workflows/maven-publish.yaml
@@ -1,4 +1,4 @@
-name: Maven Deploy
+name: Publish package to the Maven Central Repository
 
 on:
   release:
@@ -9,16 +9,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK
+    - name: Set up Maven Central Repository
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'adopt'
+        cache: 'maven'
         server-id: ossrh
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
+        #server-username: MAVEN_USERNAME
+        #server-password: MAVEN_PASSWORD
+    - name: Import GPG Key
+      uses: crazy-max/ghaction-import-gpg@v5.0.0
+      with:
+        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+        passphrase: ${{ secrets.GPG_PASSPHRASE }}
     - name: Publish package
-      run: mvn --batch-mode -P deploy deploy
+      run: mvn -B -Pdeploy -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} deploy
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+
+# See https://docs.github.com/en/actions/publishing-packages/publishing-java-packages-with-maven
