--- a/.github/workflows/maven-publish.yaml
+++ b/.github/workflows/maven-publish.yaml
@@ -12,21 +12,24 @@ jobs:
     - name: Set up Maven Central Repository
       uses: actions/setup-java@v4
       with:
+        distribution: 'temurin'
         java-version: '11'
-        distribution: 'adopt'
         cache: 'maven'
         server-id: ossrh
-        #server-username: MAVEN_USERNAME
-        #server-password: MAVEN_PASSWORD
-    - name: Import GPG Key
-      uses: crazy-max/ghaction-import-gpg@v5.0.0
-      with:
-        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-        passphrase: ${{ secrets.GPG_PASSPHRASE }}
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+        gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+        gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
+#    - name: Import GPG Key
+#      uses: crazy-max/ghaction-import-gpg@v6
+#      with:
+#        gpg_private_key: 
+#        passphrase: 
     - name: Publish package
       run: mvn -B -Pdeploy -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} deploy
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
 
+# See https://itnext.io/publishing-artifacts-to-maven-central-using-github-actions-a-step-by-step-guide-fd65ef075fd4
 # See https://docs.github.com/en/actions/publishing-packages/publishing-java-packages-with-maven
