--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
 
     <build>
         <plugins>
+            <!-- We need a newer version for the rather old JDK -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.12.1</version>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
