--- a/.github/workflows/maven-publish.yaml
+++ b/.github/workflows/maven-publish.yaml
@@ -20,11 +20,9 @@ jobs:
         server-password: MAVEN_PASSWORD
         gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
         gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
-#    - name: Import GPG Key
-#      uses: crazy-max/ghaction-import-gpg@v6
-#      with:
-#        gpg_private_key: 
-#        passphrase: 
+    - if: github.event.release
+      name: Update version in pom.xml (Release only)
+      run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
     - name: Publish package
       run: mvn -B -Pdeploy -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} deploy
       env:
