--- a/.github/workflows/maven-publish.yaml
+++ b/.github/workflows/maven-publish.yaml
@@ -20,9 +20,12 @@ jobs:
         server-password: MAVEN_PASSWORD
         gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
         gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
+    # We name releases v1.2.3 but Maven wants 1.2.3
+    - id: get_version
+      uses: baileyherbert/version-action@v3
     - if: github.event.release
       name: Update version in pom.xml (Release only)
-      run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
+      run: mvn -B versions:set -DnewVersion=${{ steps.get_version.outputs.version-without-v }} -DgenerateBackupPoms=false
     - name: Publish package
       run: mvn -B -Pdeploy -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} deploy
       env:
