Dependabot may upload dep info

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,6 +16,9 @@ on:
 
 jobs:
   build:
+    permissions:
+      # Allow dependabot to upload dependency info
+      contents: write
 
     runs-on: ubuntu-latest
 
